--- a/apps/core/templates/popup/cookie.html
+++ b/apps/core/templates/popup/cookie.html
@@ -1,4 +1,4 @@
-<!-- {% load static %}
+{% load static %}
 
 <link rel="stylesheet" href="{% static '/scss/parts/popup.css' %}" type="text/css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -6,6 +6,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&display=swap" rel="stylesheet">
 
     <div id="popup" class="hidden">
-        <h1>Ved å bruke denne nettsiden samtyker du til vår bruk av cookies</h1>
-        <button id="accept">Samtyk</button>
-    </div> -->
+        <h1>På grunn av høy etterspørsel, så bruker vi litt lengre tid på bestillinger</h1>
+        <button id="accept">Det går fint</button>
+    </div>
+    <div class="circle" id="popupCircleBackground"></div>
