--- a/apps/userprofile/templates/core/login.html
+++ b/apps/userprofile/templates/core/login.html
@@ -22,6 +22,7 @@
                 <br>
                 <div id="signUpFormErrors">{{ form.password.errors }}</div>
             </div>
+            <button type="submit" class="form-sumbit">Logg inn</button>
         </form>
     <h1>Eller <a href="/lag-bruker">lag bruker</a></h1>
 </div>
