--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -145,6 +145,8 @@ html, body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  border-bottom-left-radius: 8%;
+  border-bottom-right-radius: 8%;
 }
 
 .ecommerce .content img {
@@ -221,6 +223,8 @@ html, body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  border-bottom-left-radius: 8%;
+  border-bottom-right-radius: 8%;
 }
 
 .personal .content img {
@@ -249,6 +253,50 @@ html, body {
   opacity: 0.8;
   line-height: 230%;
   word-spacing: 1.5px;
+}
+
+.positive {
+  background: transparent;
+  width: 100%;
+  height: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-align: left;
+}
+
+.positive .content {
+  background: #93acffa8;
+  width: 100%;
+  height: 150px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-bottom-left-radius: 8%;
+  border-bottom-right-radius: 8%;
+}
+
+.positive .content img {
+  width: auto;
+  height: 180px;
+  -webkit-transform: translateY(45px);
+          transform: translateY(45px);
+}
+
+.positive h1.heading {
+  padding-left: 8px;
+  margin-bottom: 15px;
+  margin-top: 10px;
+  width: 100%;
+  font-family: 'Sniglet', cursive;
+  color: black;
+  font-weight: bold;
+  font-size: 26px;
 }
 
 .contact-us {
