--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -116,7 +116,17 @@
    <i class="fas fa-eye"></i>   
    <p>Bli synlig på nettet</p>
 </div>
-
+<br>
+<br>
+<br>
+<br>
+<!-- POSITIVE -->
+<div class="positive">
+   <h1 class="heading">Vi garanter positive resultater</h1>
+   <div class="content">
+      <img src="{% static '/images/covers/approve.png' %}" alt="image personal skills copywrite web nett">
+   </div>
+</div>
 <br>
 <br>
 <br>
