--- a/apps/userprofile/templates/core/signup.html
+++ b/apps/userprofile/templates/core/signup.html
@@ -36,6 +36,7 @@
             <br>
             <br>
         </div> 
+        <button type="submit" class="form-sumbit">Logg inn</button>
     </form>
     <h1>Eller <a href="/logg-inn">logg inn</a></h1>
 </div>
