--- a/static/scss/global.css
+++ b/static/scss/global.css
@@ -50,11 +50,11 @@ body {
 #backToTop {
   position: fixed;
   right: 0;
-  top: 80vh;
+  top: 50vh;
   z-index: 110;
   background: white;
   padding: 10px;
-  border-radius: 4px;
+  padding-bottom: 20px;
   -webkit-transition: .3s;
   transition: .3s;
   opacity: 0;
@@ -62,10 +62,18 @@ body {
   border: 2px solid transparent;
   background: linear-gradient(135deg, #688bfc, #7996f8);
   border-radius: 4px;
-  padding: 10px;
   -webkit-box-shadow: 0px 5px 2px #3c54a0;
           box-shadow: 0px 5px 2px #3c54a0;
   text-decoration: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 #backToTop i {
@@ -74,6 +82,13 @@ body {
   color: white;
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg);
+}
+
+#backToTop p {
+  font-size: 8px;
+  color: white;
+  position: absolute;
+  bottom: -10px;
 }
 
 #backToTop.active {
