--- a/static/scss/parts/popup.css
+++ b/static/scss/parts/popup.css
@@ -2,9 +2,12 @@
   opacity: 1;
   padding: 0px 20px 50px 20px;
   position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: auto;
+  bottom: 35%;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  width: 85%;
+  height: 250px;
   z-index: 10;
   text-align: center;
   background: #fafafa;
@@ -13,14 +16,18 @@
   -webkit-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
   pointer-events: visible;
+  border-radius: 5%;
+  z-index: 100000;
 }
 
 #popup h1 {
   width: auto;
   color: black;
-  font-size: 16px;
+  font-size: 18px;
   margin: 20px auto;
   font-family: 'Sniglet', cursive;
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
 }
 
 #popup button {
@@ -33,10 +40,32 @@
   border: 2px solid transparent;
   color: white;
   border-radius: 4px;
+  -webkit-transform: translateY(50px);
+          transform: translateY(50px);
 }
 
 #popup.hidden {
   opacity: 0;
   pointer-events: none;
+}
+
+.circle {
+  border-radius: 100%;
+  background: #1e1e1e;
+  width: 100px;
+  height: 100px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index: 100;
+  pointer-events: none;
+  opacity: 0;
+  -webkit-transform: scale(20);
+          transform: scale(20);
+}
+
+.circle.active {
+  opacity: 1;
+  background: rgba(10, 10, 10, 0.507);
 }
 /*# sourceMappingURL=popup.css.map */
