--- a/static/scss/parts/popup.scss
+++ b/static/scss/parts/popup.scss
@@ -3,21 +3,26 @@
         opacity: 1;
         padding: 0px 20px 50px 20px;
         position: fixed;
-        bottom: 0;
-        width: 100%;
-        height: auto;
+        bottom: 35%;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 85%;
+        height: 250px;
         z-index: 10;
         text-align: center;
         background: rgb(250, 250, 250);
         box-shadow: 0px 1px 50px rgb(60, 84, 160);
         transition: all .5s ease-in-out;
         pointer-events: visible;
+        border-radius: 5%;
+        z-index: 100000;
         h1{
             width: auto;
             color: black;
-            font-size: 16px;
+            font-size: 18px;
             margin: 20px auto;
             font-family: 'Sniglet', cursive;
+            transform: translateY(10px);
         }
         button{
             padding: 5px;
@@ -28,9 +33,29 @@
             border: 2px solid transparent; 
             color: white; 
             border-radius: 4px;
+            transform: translateY(50px);
         }
         &.hidden{
             opacity: 0;
             pointer-events: none;
+        }
+    }
+    .circle{
+        border-radius: 100%;
+        // background: rgb(7, 24, 82);
+        background: rgb(30, 30, 30);
+        width: 100px;
+        height: 100px;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        z-index: 100;
+        pointer-events: none;
+        opacity: 0;
+        transform: scale(20);
+        &.active{
+            opacity: 1;
+            // background: rgb(76, 102, 187);
+            background: rgba(10, 10, 10, 0.507);
         }
     }
