--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -234,6 +234,9 @@
                             font-size: 16px;
                             margin: 5px;
                             opacity: 0.65 !important;
+                            &#logOut{
+                                color: rgb(255, 42, 42);
+                            }
                         }
                         &.active{
                             display: block;
