--- a/static/scss/store/product.scss
+++ b/static/scss/store/product.scss
@@ -1,20 +1,288 @@
 // STANDARD PHONE
-  .product-page{
+#navbar{
+  display: none !important;
+}
+  .product-page-blog{
       position: relative;
       width: 100%;
       height: 900px;
-      text-align: center;
-      background: #829efc;
-      padding-top: 190px;
-      h1{
-        &.heading{
-          width: 100%;
-          text-transform: uppercase;
-          font-family: 'Sniglet', cursive;
-          color: rgb(20, 44, 120);
-          font-weight: 700;
-          font-size: 26px;
-          text-align: center;
+      background: #8fa9ff;
+      #navbar-blog{
+        // NAVBAR CSS
+        background: transparent;
+        z-index: 100;
+        width: 100%;
+        height: 60px;
+        position: fixed;
+        top: 0px;
+        display: flex;
+        align-items: center;
+        transition: .2s ease-in-out;
+        // NAVBAR STICKY
+        &.sticky{
+            background: white;
+            .hamburger{
+                span{
+                    background: rgb(50, 50, 50);
+                }
+            }
+            .my-account-icon{
+                i{
+                    color: rgb(50, 50, 50);
+                }
+            }
+            .logo{
+                h1{
+                    color: #5370d1;
+                }
+            }
         }
+        // LOGO CSS 
+        .logo{
+            cursor: pointer;
+            position: absolute;
+            left: 20px;
+            width: auto;
+            height: auto;
+            z-index: 1000;
+            h1{
+                margin: 0;
+                color: rgb(235, 235, 235);
+                font-size: 22px;
+                transition: .2s ease-in-out;
+            }
+            &.menu-click{
+                h1{
+                    color: rgb(235, 235, 235);
+                }
+            }
+        }
+        // // // MENU CSS
+        // HAMBURGER CSS
+        .hamburger{
+            padding: 10px;
+            margin: 0;
+            width: auto;
+            height: auto;
+            position: absolute;
+            right: 0px;
+            z-index: 1000;
+            display: flex;
+            span{
+                display: block;
+                width: 7px;
+                height: 7px;
+                transition: .2s;
+                background: rgb(235, 235, 235);
+                border-radius: 100%;
+                margin: 3px;
+                transform: translateX(-9px);
+            }
+            .upper-span{
+            }
+            .center-span{
+            }
+            .lower-span{
+            }
+            &.click{
+                .upper-span{
+                    margin-top: 15px;
+                }
+                .center-span{
+                    width: 8px;
+                    height: 8px;
+                }
+                .lower-span{
+                    margin-top: 15px;
+                }
+                span{
+                    background: rgb(235, 235, 235) !important;
+                }
+            }
+        }
+        // SIDEBAR
+        .circle{
+            border-radius: 100%;
+            // background: rgb(7, 24, 82);
+            background: rgb(30, 30, 30);
+            width: 100px;
+            height: 100px;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translateX(-50%) scale(1);
+            z-index: 100;
+            pointer-events: none;
+            transition: all 1s ease-in-out;
+            opacity: 0;
+            &.active{
+                transform: scale(20);
+                opacity: 1;
+                // background: rgb(76, 102, 187);
+                background: rgba(10, 10, 10, 0.95);
+            }
+        }
+        .sidebar{
+            background: transparent;
+            height: 100vh;
+            position: absolute;
+            top: 60px;
+            right: 0px;
+            width: 100%;
+            transition: .7s;
+            z-index: 120;
+            opacity: 0;
+            pointer-events: none;
+            .sidebar-ul{
+                position: relative;
+                width: 100%;
+                text-align: center;
+                .sidebar-li{
+                    list-style: none;
+                    a{
+                        border: 2px solid transparent;
+                        // color: rgb(72, 90, 185);
+                        color: white;
+                        display: inline-block;
+                        text-decoration: none;
+                        width: 60%;
+                        font-size: 18px;
+                        margin: 13px auto;
+                        padding: 5px;
+                        opacity: 0;
+                        transition: .1s;
+                        transition: opacity .3s;
+                        i{
+                            transform: translateX(10px);
+                            font-size: 14px;
+                            transition: .2s !important;
+                        }
+                    }
+                    .prices-dropdown{
+                        .prices-dropdown-links{
+                            width: 100%;
+                            height: 100vh;
+                            display: none;
+                            a{
+                                font-size: 16px;
+                                margin: 5px;
+                                opacity: 0.65 !important;
+                            }
+                            &.active{
+                                display: block;
+                            }
+                        }
+                        #pricesToggle{
+                            &.click{
+                                transform: scale(1.2);
+                                color: #8fa9ff;
+                                i{
+                                    transform: rotate(180deg) translateX(-10px);
+                                }
+                            }
+                        }
+                    }
+                    .about-dropdown{
+                        .about-dropdown-links{
+                            width: 100%;
+                            height: 100vh;
+                            display: none;
+                            a{
+                                font-size: 16px;
+                                margin: 5px;
+                                opacity: 0.65 !important;
+                            }
+                            &.active{
+                                display: block;
+                            }
+                        }
+                        #aboutToggle{
+                            &.click{
+                                transform: scale(1.2);
+                                color: #8fa9ff;
+                                i{
+                                    transform: rotate(180deg) translateX(-10px);
+                                }
+                            }
+                        }
+                    }
+                    .help-dropdown{
+                        .help-dropdown-links{
+                            width: 100%;
+                            height: 100vh;
+                            display: none;
+                            a{
+                                font-size: 16px;
+                                margin: 5px;
+                                opacity: 0.65 !important;
+                            }
+                            &.active{
+                                display: block;
+                            }
+                        }
+                        #helpToggle{
+                            &.click{
+                                transform: scale(1.2);
+                                color: #8fa9ff;
+                                i{
+                                    transform: rotate(180deg) translateX(-10px);
+                                }
+                            }
+                        }
+                    }
+                    .account-dropdown{
+                        .account-dropdown-links{
+                            width: 100%;
+                            height: 100vh;
+                            display: none;
+                            a{
+                                font-size: 16px;
+                                margin: 5px;
+                                opacity: 0.65 !important;
+                            }
+                            &.active{
+                                display: block;
+                            }
+                        }
+                        #accountToggle{
+                            &.click{
+                                transform: scale(1.2);
+                                color: #8fa9ff;
+                                i{
+                                    transform: rotate(180deg) translateX(-10px);
+                                }
+                            }
+                        }
+                    }
+                    &.active{
+                        a{
+                            opacity: 1;
+                        }
+                    }
+                }
+            }
+            &.active{
+                opacity: 1;
+                pointer-events: visible;
+            }
+        }    
+        // ORDER CSS
+        .order{
+            margin: 0;
+            position: absolute;
+            right: 80px;
+            cursor: pointer;
+            color: white;
+            padding: 5px 5px;
+            width: 80px;
+            text-align: center;
+            border-radius: 7px;
+            transition: .2s;
+            font-size: 12px;
+            border-radius: 4px;
+            background: transparent;
+            text-decoration: none;
+            background: rgb(28, 211, 28);
+          }
       }
   }
